...
                <ScrollView style={styles.column} keyboardShouldPersistTaps="handled">
                    {/* Name Field */}
                    <Controller
                        control={control}
                        name="formName"
                        rules={{
                            required: 'Full name is required',
                            minLength: {
                                value: 2,
                                message: 'Name must be at least 2 characters'
                            },
                            // Validate that there is first and last name
                            validate: (value) => {
...
                            <View>
                                <TextInput
                                    style={[styles.input, errors.formName && styles.inputError]}
                                    onBlur={onBlur}
                                    onChangeText={onChange}
                                    value={value}
                                    placeholder="Full Name"
                                    placeholderTextColor="gray"
                                />
                                {errors.formName && (
                                    <Text style={[styles.errorText, {marginTop: 15}]}>{errors.formName.message}</Text>
                                )}
                            </View>
...

                    {/* Email Field */}
                    <Controller
                        control={control}
                        name="formEmail"
                        rules={{
                            required: 'Email is required',
                            pattern: {
                                value: /^\S+@\S+$/i,
                                message: 'Invalid email address'
                            }
                        }}
                        render={({ field: { onChange, onBlur, value } }) => (
                            <View>
                                <TextInput
                                    style={[styles.input, errors.formEmail && styles.inputError]}
                                    onBlur={onBlur}
                                    onChangeText={onChange}
                                    value={value}
                                    placeholder="Email"
                                    keyboardType="email-address"
                                    autoCapitalize="none"
                                    placeholderTextColor="gray"
                                />
                                {errors.formEmail && (
                                    <Text style={[styles.errorText, {marginTop: 15}]}>{errors.formEmail.message}</Text>
...

                    {/* Password Field */}
                    <Controller
                        control={control}
                        name="formPassword"
                        rules={{
                            required: 'Password is required',
                            minLength: {
                                value: 8,
                                message: 'Password must have at least 8 characters'
                            }
                        }}
                        render={({ field: { onChange, onBlur, value } }) => (
                            <View>
                                <TextInput
                                    style={[styles.input, errors.formPassword && styles.inputError]}
                                    onBlur={onBlur}
                                    onChangeText={onChange}
                                    value={value}
                                    placeholder="Password"
                                    secureTextEntry={true}
                                    placeholderTextColor="gray"
                                />
                                {errors.formPassword && (
                                    <Text style={[styles.errorText, {marginTop: 15}]}>{errors.formPassword.message}</Text>
                                )}
...
                            <View>
                                <TextInput
                                    style={[styles.input, errors.formAddress1 && styles.inputError]}
                                    onBlur={onBlur}
                                    onChangeText={onChange}
                                    value={value}
                                    placeholder="Address"
                                    placeholderTextColor="gray"
                                />
                                {errors.formAddress1 && (
                                    <Text style={[styles.errorText, {marginTop: 15}]}>{errors.formAddress1.message}</Text>
                                )}
                            </View>
...
                            <View>
                                <TextInput
                                    style={[styles.input, errors.formCity && styles.inputError]}
                                    onBlur={onBlur}
                                    onChangeText={onChange}
                                    value={value}
                                    placeholder="City"
                                    keyboardType="default"
                                    autoCapitalize="words"
                                    placeholderTextColor="gray"
                                />
                                {errors.formCity && (
                                    <Text style={[styles.errorText, {marginTop: 15}]}>{errors.formCity.message}</Text>
...
                            <View>
                                <TextInput
                                    style={[styles.input, errors.formState && styles.inputError]}
                                    onBlur={onBlur}
                                    onChangeText={onChange}
                                    value={value}
                                    placeholder="State (e.g. FL)"
                                    keyboardType="default"
                                    autoCapitalize="characters"
                                    maxLength={2}
                                    minLength={2}
                                    placeholderTextColor="gray"
                                />
...
                            <View>
                                <TextInput
                                    style={[styles.input, errors.formZip && styles.inputError]}
                                    onBlur={onBlur}
                                    onChangeText={onChange}
                                    value={value}
                                    placeholder="ZIP Code"
                                    keyboardType="phone-pad"
                                    placeholderTextColor="gray"
                                    maxLength={5}
                                    minLength={5}
                                />
                                {errors.formZip && (
...
                    {/* Scroll Space lmao */}
                    <View style={{ height: 250 }} />
                </ScrollView>
            </KeyboardAvoidingView>
            <View style={styles.footer}>
                <Button
                    title="Sign Up"
                    height={66}
                    onPress={handleSubmit(onSubmit)}
                />
                <View style={styles.row}>
                    <Text style={[styles.link, {color: Colors.default.textWhite}]}>
                        Already have an account?
                    </Text>

                    <TouchableOpacity onPress={() => router.push('/login')}>
                        <Text style={styles.link}>  Login</Text>
                    </TouchableOpacity>
                </View>
            </View>
        </View>
    );
}
...
