...
                        name="index"
                        options={{ title: 'Sign Up' }}

                    />
                    <Stack.Screen
                        name="login"
                        options={{ title: 'Login' }}
                    />
                    <Stack.Screen
                        name="home"
                        options={{
                            title: 'Home',
                            headerRight: () => <ProfileIcon />,
...
