...
                scrollEnabled={editProfile}
            >
                <View style={styles.container}>
                    
                    {/* Profile Information */}
                    <View style={styles.row}>
                        <Text style={styles.titleBold}>Profile Information</Text>
                        
                        {/* Edit Profile Button */}
                        {!editProfile && (
                            <TouchableOpacity onPress={handleEditProfile}> 
                                <Text style={styles.editButton}>Edit Profile</Text>
                            </TouchableOpacity>
...
                    )}

                    {/* Account Actions */}
                    {!editProfile && (
                        <>
                            <View style={styles.row}>
                                <Text style={styles.titleBold}>Account Actions</Text>
                            </View>

                            {/* Account Action Buttons */}
                            <View style={styles.rowButton}>
                                <Button
                                    // Intentional spacing to center button text
...
                                    style={styles.button}
                                    variant="primary"
                                    onPress={logout}
                                />
                                <Button
                                    // Intentional spacing to center button text
                                    title={<Text style={styles.buttonText}>   Delete Account</Text>}
                                    width={105}  
                                    height={60}
                                    style={[styles.button, {paddingHorizontal: 20}]}
                                    variant="primary"
                                    onPress={() => setDeleteAccountModal(true)}
                                />
...
