...
export default function HomeScreen(){
    return(
        <ScrollView style = {StyleSheet.container}>

            //Header with title and picture 
            <View style ={StyleSheet.header}>
            <Text style = {styles.headerTitle}>Home</Text>   
                </View>
            <Image
            source = {{uri: 'https://www.orlando.gov/files/sharedassets/public/v/2/documents/assets-official/cityoforlando_horizontal_logo_official.png'}}
            style = {styles.profilePic}
            />

...
            <TouchableOpacity style = {styles.hideButton}>
                <Text style = {styles.hideText}>Hide?</Text>
            </TouchableOpacity>
                </View>
                //Order Status Section 
            <View style ={styles.card}>
                <Text sytle = {styles.sectionTitle}>Order Status</Text>
                <View style = {styles.orderBox}>
                    <Text>ORDER PLACED: </Text>
                    <Text>ORDER #: </Text>
            </View>

            <Text style ={styles.returnByText}> Return by: </Text>
...
