appId: host.exp.Exponent

# Test: Verify user can not edit profile if they have an active reservation or borrowed device
---
- launchApp

# Navigate to app in Expo Go
- assertVisible: "community-connectivity-orlando"
- tapOn: "community-connectivity-orlando"

# Step 1: Login to the App
# Sign Up Screen -> Login Screen
- assertVisible: "Already have an account?"
- tapOn: "  Login"
- assertVisible: "Login to"
- assertVisible: "Your Account"
- tapOn: "user@example.com"
- inputText: # email address
- tapOn: "Password"
- inputText: # password
- tapOn:
    point: "50%,51%" # Location of Login button
- tapOn: "OK"

# Step 2: Check if user has an active reservation or borrowed device
# Home Screen
- assertVisible: "Order Status"

# Step 3: Navigate to the profile page
- assertVisible: "Home"
- tapOn:
    point: "91%,9%" # Location of Profile button

# Step 4: Click the "Edit Profile" button
- assertVisible: "Edit Profile"
- tapOn: "Edit Profile"

# Expected Results: 
# User cannot edit any fields. All fields are disabled and grayed out
# First Name field
- tapOn:
    point: 28%,59% # Location of First Name field
- assertVisible: 
    "Oops: This field cannot be edited! You still have an active device rental or reservation."
- extendedWaitUntil:
    notVisible: 
        text: 'Oops: This field cannot be edited! You still have an active device rental or reservation.'
    timeout: 3000
# Last Name field
- tapOn:
    point: 72%,59% # Location of Last Name field
- assertVisible: 
    "Oops: This field cannot be edited! You still have an active device rental or reservation."
- extendedWaitUntil:
    notVisible: 
        text: 'Oops: This field cannot be edited! You still have an active device rental or reservation.'
    timeout: 3000
# Phone Number field
- tapOn:
    point: 28%,68% # Location of Phone Number field
- assertVisible: "Oops: This field cannot be edited! You still have an active
  device rental or reservation."
- extendedWaitUntil:
    notVisible: 
        text: 'Oops: This field cannot be edited! You still have an active device rental or reservation.'
    timeout: 3000
# Date of Birth field
- tapOn:
    point: 72%,68% # Location of Date of Birth field
- assertVisible: "Oops: This field cannot be edited! You still have an active
  device rental or reservation."
- extendedWaitUntil:
    notVisible: 
        text: 'Oops: This field cannot be edited! You still have an active device rental or reservation.'
    timeout: 3000
# Address field
- tapOn:
    point: 50%,78% # Location of Address field
- assertVisible: "Oops: This field cannot be edited! You still have an active
  device rental or reservation."
- extendedWaitUntil:
    notVisible: 
        text: 'Oops: This field cannot be edited! You still have an active device rental or reservation.'
    timeout: 3000
# Email field
- tapOn:
    point: 50%,87% # Location of Email field
- assertVisible: "Oops: This field cannot be edited! You still have an active
  device rental or reservation."
- extendedWaitUntil:
    notVisible: 
        text: 'Oops: This field cannot be edited! You still have an active device rental or reservation.'
    timeout: 3000
# Cancel button
- tapOn:
      point: "72%,95%" # Location of Cancel button

# Verify user isback to the profile view
- assertVisible: "Profile Information"
- assertVisible: "Account Actions"